--- a/package.json
+++ b/package.json
@@ -9,7 +9,16 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "date-fns": "^2.16.1",
+    "lodash": "^4.17.20",
+    "node-sass": "^4.14.1",
+    "normalize.css": "^8.0.1",
+    "sass-loader": "^10.0.2",
+    "vue": "^2.6.11",
+    "vue-i18n": "^8.22.0",
+    "vue-router": "^3.4.6",
+    "vuex": "^3.5.1",
+    "vuex-i18n": "^1.13.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
